Set user to None to logout; #664
Is this right? This can't be right. Is this right?

--- a/www/%participant_id/deactivate.html
+++ b/www/%participant_id/deactivate.html
@@ -4,6 +4,7 @@ from gittip.utils import get_participant
 participant = get_participant(request)
 if POST:
     participant.deactivate()
+    user = None
     request.redirect('/')
 
 locked = False
